# iotbus

./: CMakeLists.txt  LICENSE.APLv2  NOTICE  README.md  capi-iotbus.pc.in  iotbus.mdj
include/: capi_iotbus.h  capi_iotbus_adc.h  capi_iotbus_error.h  capi_iotbus_gpio.h  capi_iotbus_i2c.h  capi_iotbus_pwm.h  capi_iotbus_spi.h  capi_iotbus_uart.h
packaging/: capi-iotbus.spec  iotbus-server.service
src/: CMakeLists.txt
src/include/: iotbus_dbus.h  iotbus_error.h
src/iotbus_api/: capi_iotbus_adc.c  capi_iotbus_dbus.c  capi_iotbus_dbus.h  capi_iotbus_gpio.c  capi_iotbus_i2c.c  capi_iotbus_pwm.c  capi_iotbus_spi.c
src/iotbus_interface/: CMakeLists.txt  iotbus_adc.c  iotbus_adc.h  iotbus_gpio.c  iotbus_gpio.h  iotbus_i2c.c  iotbus_i2c.h  iotbus_pwm.c  iotbus_pwm.h  iotbus_spi.c  iotbus_spi.h  iotbus_uart.c  iotbus_uart.h
src/iotbus_server/: CMakeLists.txt  iotbus_process.c  iotbus_server.h  iotbus_server_gpio.c  iotbus_server_i2c.c  iotbus_server_pwm.c
test/: CMakeLists.txt  iotbus_interface_test.c  iotbus_test.c
