PROJECT (iotbus_test)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(src/iotbus_interface)

SET(IOTBUS_TEST "iotbus_test")
SET(IOTBUS_TEST_SRCS "iotbus_test.c" "iotbus_interface_test.c")
FILE(GLOB PROJECT_SRCS *.c  ${CMAKE_SOURCE_DIR}/src/iotbus_interface/*.c)


INCLUDE(FindPkgConfig)
pkg_check_modules(test_pkgs REQUIRED dlog glib-2.0 gio-2.0)


INCLUDE_DIRECTORIES(${test_pkgs_INCLUDE_DIRS})
LINK_DIRECTORIES(${test_pkgs_LIBRARY_DIRS})
ADD_EXECUTABLE(${IOTBUS_TEST} ${IOTBUS_TEST_SRCS} ${PROJECT_SRCS})
TARGET_LINK_LIBRARIES(${IOTBUS_TEST} ${test_pkgs_LIBRARIES} ${CLIENT} pthread)
INSTALL(TARGETS ${IOTBUS_TEST} DESTINATION ${BIN_INSTALL_DIR})

FILE(GLOB PROJECT_HEADER *.h iotbus_interface/*.h)
INSTALL(FILES ${PROJECT_HEADER} DESTINATION ${INCLUDE_INSTALL_DIR}/${IOTBUS_TEST})
