LINK_DIRECTORIES(${CMAKE_BINARY_DIR})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/iotbus_interface)
INCLUDE_DIRECTORIES(../include)


SET(IOTBUS_SERVER "iotbus_server")
FILE(GLOB IOTBUS_SERVER_SRCS *.c ${CMAKE_SOURCE_DIR}/src/iotbus_interface/*.c)

INCLUDE(FindPkgConfig)
pkg_check_modules(server_pkgs REQUIRED dlog glib-2.0 gio-2.0)
INCLUDE_DIRECTORIES(${server_pkgs_INCLUDE_DIRS})
LINK_DIRECTORIES(${server_pkgs_LIBRARY_DIRS})

ADD_EXECUTABLE(${IOTBUS_SERVER} ${IOTBUS_SERVER_SRCS})
TARGET_LINK_LIBRARIES(${IOTBUS_SERVER} ${server_pkgs_LIBRARIES} ${CLIENT})
INSTALL(TARGETS ${IOTBUS_SERVER} DESTINATION ${BIN_INSTALL_DIR})
